// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeeperValidators register multiple validators succeeds 1`] = `
Object {
  "calldataByteLength": 3748,
  "gasUsed": 694644,
}
`;

exports[`KeeperValidators register multiple validators succeeds 2`] = `
Object {
  "calldataByteLength": 3748,
  "gasUsed": 602876,
}
`;

exports[`KeeperValidators register single validator succeeds 1`] = `
Object {
  "calldataByteLength": 1540,
  "gasUsed": 340291,
}
`;

exports[`KeeperValidators register single validator succeeds 2`] = `
Object {
  "calldataByteLength": 1540,
  "gasUsed": 286634,
}
`;

exports[`KeeperValidators set validators oracles succeeds 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 32165,
}
`;
